--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,7 @@ ul {
     top: 0;
     left: 0;
     width: 100%;
-    /* height: calc(100vh + 1%); */
+    /* height: calc(100dvh + 1%); */
     transition: opacity 0.5s ease;
     list-style-type: none;
     padding: 0;
@@ -101,12 +101,12 @@ div h3#iban {
 .sky-container {
     position: absolute;
     top: 0;
-    height: 85vh !important;
+    height: 85dvh !important;
     width: 100%;
 }
 
 #sky_image {
-    height: 85vh !important;
+    height: 85dvh !important;
     width: 100%;
 }
 
@@ -128,7 +128,7 @@ div h3#iban {
 
 #scrollContainer {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow-y: auto;
     text-align: -webkit-center;
     margin: 0px;
@@ -177,7 +177,7 @@ div h3#iban {
 }
 
 .container_separator_horizontal {
-    height: calc(100vh* 0.1);
+    height: calc(100dvh* 0.1);
     display: flex;
 }
 
@@ -195,12 +195,12 @@ div span.separator_vertical {
     content: '';
     display: block;
     min-height: 16px;
-    height: 7vh;
+    height: 7dvh;
     background-color: #000000;
 }
 
 .container_separator_vertical {
-    height: 7vh;
+    height: 7dvh;
 }
 
 
@@ -221,7 +221,7 @@ div span.after-dot {
 
 .image-container img {
     z-index: 1;
-    height: 30vh;
+    height: 30dvh;
     width: 100%;
     display: block;
 }
@@ -388,7 +388,7 @@ div span.after-dot {
 .flex-container {
     position: absolute;
     bottom: 0;
-    height: 25vh !important;
+    height: 25dvh !important;
     width: 100%;
     z-index: 99999;
     display: flex;
