--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,6 +14,9 @@
 }
 
 @media only screen and (min-device-height: 832px) and (max-device-height : 952px) and (orientation : portrait){
+    #first_ul {
+        margin-bottom: 14dvh;
+    }
     .container_separator_horizontal {
         height: calc(100dvh* 0.13);
     }
